--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,7 +5,7 @@
 
 #druid config
 druid.jdbc.driverClassName=com.mysql.jdbc.Driver
-druid.jdbc.url=jdbc:mysql://127.0.0.1:3306/morpho?useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true&zeroDateTimeBehavior=convertToNull
+druid.jdbc.url=jdbc:mysql://193.0.10.211:3306/morpho?useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true&zeroDateTimeBehavior=convertToNull
 druid.jdbc.username=root
 druid.jdbc.password=root
 druid.jdbc.validationQuery=SELECT 1
@@ -59,22 +59,22 @@ mail.timeout=25000
 #redis config
 #host
 redis.host=127.0.0.1
-#\u7aef\u53e3
+#\u7AEF\u53E3
 redis.port=6379
 #password 
 #if have password please alse config application-shiro-redis the password
 redis.password=
 #database
 redis.database=0
-#\u8d85\u65f6
+#\u8D85\u65F6
 redis.timeout=3000
-#\u6700\u5927\u95f2\u7f6e
+#\u6700\u5927\u95F2\u7F6E
 redis.maxIdle=10
-#\u6700\u5c0f\u95f2\u7f6e
+#\u6700\u5C0F\u95F2\u7F6E
 redis.minIdle=2
-#\u6700\u5927\u8fde\u63a5\u6570
+#\u6700\u5927\u8FDE\u63A5\u6570
 redis.maxTotal=10
-#\u83b7\u53d6\u8fde\u63a5(borrow(\u5f15\u5165)\u4e00\u4e2ajedis\u5b9e\u4f8b)\u65f6\u7684\u6700\u5927\u7b49\u5f85\u6beb\u79d2\u6570
+#\u83B7\u53D6\u8FDE\u63A5(borrow(\u5F15\u5165)\u4E00\u4E2Ajedis\u5B9E\u4F8B)\u65F6\u7684\u6700\u5927\u7B49\u5F85\u6BEB\u79D2\u6570
 redis.maxWaitMillis=1000
 
 
